traversal.snake.Snake.scala.error
Compilation error:
Snake:39: error: Unmatched closing brace '}' ignored here
}
^